--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "gpl-2.0+",
   "devDependencies": {
     "@wordpress/scripts": "^25.2.0"
   }
